--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -8,7 +8,9 @@
 }
 
 $primary-color: #ffffff;
+$primary-dark: #000;
 $secondary-color: #12A454;
+$secondary-color-50: rgba(18, 164, 84, 0.5);
 $secondary-color-light: #D5FADC;
 $secondary-color-lighter: #E8FBEB;
 $secondary-color-rating: #9BCA45;
@@ -17,6 +19,7 @@ $secondary-color-blur: #E2F3C2;
 $footer-color: #094625;
 $footer-newsletter: #096232;
 
+$text-color: #666666;
 $dull-white: #D9D9D9;
 
 
@@ -29,12 +32,30 @@ $dull-white: #D9D9D9;
 @mixin normal-font {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
+  font-size: 1.6rem;
+}
+
+@mixin normal-font-bold {
+  font-family: 'Lato', sans-serif;
+  font-weight: 800;
+}
+
+@mixin normal-big-font {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 1.76rem;
 }
 
 @mixin small-font {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  font-size: .8rem;
+  font-size: 1.2rem;
+}
+
+@mixin bold-font-mini {
+  font-family: 'Urbanist', sans-serif;
+  font-weight: 800;
+  font-size: 2.8rem;
 }
 
 @function set-text-color($color) {
@@ -43,6 +64,10 @@ $dull-white: #D9D9D9;
   } @else {
     @return #fff;
   }
+}
+
+@mixin outline {
+  outline: 1px solid red;
 }
 
 @mixin transition-ease {
@@ -69,18 +94,38 @@ $dull-white: #D9D9D9;
   border-radius: 50%;
 }
 
+@mixin round-icons {
+.img-circle {
+    background: $secondary-color-lighter;
+      @include circle(120px);
+      @include flex;
+
+    &__inner {
+      @extend .img-circle;
+      @include circle(calc(120px - 25px));
+      background: $secondary-color-light;
+
+    }
+  }
+}
+
 @mixin secondary-btn {
-  width: 7.4rem;
-  height: 2.6rem;
-  font-size: 1rem;
-  font-family: 'Lato', sans-serif;
+  width: auto;
+  height: 4.16rem;
+  padding: 0 1.6rem;
+  @include normal-big-font;
   font-weight: 600;
   background: $secondary-color;
   color: #FAFAFA;
   border: none;
-  border-radius: .3rem;
+  border-radius: .48rem;
   cursor: pointer;
   @include flex;
+}
+
+@mixin line-btn {
+  background: transparent;
+  border: 1px solid $primary-color;
 }
 
 @mixin star  {
@@ -95,5 +140,9 @@ $dull-white: #D9D9D9;
 @mixin three-card-system {
   width: 32.2%;
   border-radius: 5px;
+}
+
+@mixin info-width {
+  width: 46.8rem;
 }
 
