--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,9 @@
 footer {
   background: $footer-color;
   color: $primary-color;
-  margin-top: 5rem;
+  margin-top: 0;
   .footer {
+    margin-top: 0;
     @include flex(column);
 
     .links {
@@ -13,21 +14,21 @@ footer {
       & > * {
         @include flex(column);
         align-items: flex-start;
-        gap: .6rem;
+        gap: .96rem;
 
         h3 {
-          margin-top: 1.5rem;
-          margin-bottom: 2rem;
+          margin-top: 2.4rem;
+          margin-bottom: 3.2rem;
           @include normal-font;
           font-weight: 500;
-          font-size: .9rem;
+          font-size: 1.44rem;
           text-transform: uppercase;
           color: $secondary-color;
         }
 
         a {
           @include normal-font;
-          font-size: .9rem;
+          font-size: 1.44rem;
           color: $primary-color;
         }
       }
@@ -35,23 +36,23 @@ footer {
       &__contact {
 
         .footer-logo {
-          margin-bottom: 1rem;
+          margin-bottom: 1.6rem;
         }
       }
     }
 
     .newsletter {
-      height: 4.7rem;
+      height: 7.52rem;
       background: $footer-newsletter;
       @include flex;
       justify-content: space-between;
-      padding: .65rem 1rem;
-      margin-bottom: 2rem;
+      padding: 1.04rem 1.6rem;
+      margin-bottom: 3.2rem;
 
       &__text {
-        font-size: 1.5rem;
-        margin: auto 2rem;
-        padding: 1rem;
+        font-size: 2.4rem;
+        margin: auto 3.2rem;
+        padding: 1.6rem;
         color: $dull-white;
       }
 
@@ -61,18 +62,18 @@ footer {
         @include flex;
         justify-content: space-between;
         height: 100%;
-        padding: 1rem;
+        padding: 1.6rem;
 
         input {
           background: none;
-          width: 80%;
+          width: 70%;
           height: 100%;
           border: none;
           outline: none;
         }
 
         button {
-          width: 7.3rem;
+          // width: 11.6rem;
           border-radius: 0;
           font-family: 'Nunito Sans', sans-serif;
         }
