--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100&family=Nunito+Sans:wght@400;600&family=Satisfy&family=Urbanist:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400&family=Nunito+Sans:wght@400;600&family=Satisfy&family=Urbanist:wght@200;300;400;500;600;700;800;900&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
@@ -24,9 +24,26 @@ $dull-white: #D9D9D9;
 
 
 
-@mixin bold-font {
+@mixin bold-font-one {
   font-family: 'Urbanist', sans-serif;
   font-weight: 800;
+  font-size: 8rem;
+}
+
+@mixin bold-font-two {
+  font-family: 'Urbanist', sans-serif;
+  font-weight: 800;
+  font-size: 4.16rem;
+}
+@mixin bold-font-three {
+  font-family: 'Urbanist', sans-serif;
+  font-weight: 800;
+  font-size: 3.36rem;
+}
+@mixin bold-font-four {
+  font-family: 'Urbanist', sans-serif;
+  font-weight: 800;
+  font-size: 2.24rem;
 }
 
 @mixin normal-font {
@@ -38,6 +55,7 @@ $dull-white: #D9D9D9;
 @mixin normal-font-bold {
   font-family: 'Lato', sans-serif;
   font-weight: 800;
+  font-size: 2.5rem;
 }
 
 @mixin normal-big-font {
