--- a/scss/_courses.scss
+++ b/scss/_courses.scss
@@ -36,7 +36,7 @@ section.courses .social-note {
 }
 
 
-section.courses .course-modules {
+.course-modules {
   margin-top: 9rem;
   &__menu {
     .module-menu {
