--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -53,6 +53,10 @@
   }
 }
 
+.header {
+  background: $primary-color;
+}
+
 .nav {
   position: fixed;
   top: 0;
@@ -72,12 +76,13 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    overflow: hidden;
+    // overflow: hidden;
     background: $primary-color;
     list-style-type: none;
     padding-right: 1.6rem;
     transform: translateY(-100%);
     @include transition-ease;
+    gap: 3.3rem;
 
     &.open {
       transform: translateY(0);
@@ -86,6 +91,8 @@
     &__item {
       transform: translateX(100vw);
       @include transition-ease;
+      font-size: 2.7rem;
+      font-weight: 500;
 
       &.open {
        transform: translateX(0); 
@@ -94,6 +101,51 @@
       &.active > a {
         color: $secondary-color;
       }
+
+
+      &.navbar-dropdown {
+          position: relative;
+
+          & .dropdown {
+            display: none;
+            opacity: 0;
+            // position: absolute;
+            // @include flex(column);
+            align-items: flex-start;
+            gap: 1.5rem;
+            // padding: 2rem 1.3rem;
+            top: 100%;
+            transform: translateY(0px);
+            // left: 50%;
+            // width: 25rem;
+            background-color: #fff;
+            box-shadow: 0px 10px 10px 3px rgba(0, 0, 0, 0.3);
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+            z-index: 111;
+            transition: 0.4s all;
+
+            a {
+              @include normal-font;
+              transition: 0.4s all;
+              
+              &:focus {
+                padding-left: 1rem;
+                color: $secondary-color;
+              }
+            }
+          }
+
+          &:hover .dropdown {
+            visibility: visible;
+            @include flex(column);
+            opacity: 1;
+            transform: translateY(0px);
+          }
+        }
+
+
+
     }
 
     &__link {
