--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -7,7 +7,7 @@
       background: $primary-color;
       height: 8rem;
       margin-top: 0 !important;
-      overflow: hidden;
+      overflow: visible;
       // position: fixed;
       // z-index: 20;
 
@@ -59,17 +59,31 @@
             visibility: hidden;
             opacity: 0;
             position: absolute;
-            padding: 20px 0;
-            top: 50%;
-            transform: translateY(0px);
+            @include flex(column);
+            align-items: flex-start;
+            gap: 1.5rem;
+            padding: 2rem 1.3rem;
+            top: 100%;
+            transform: translateY(50px);
             left: 0;
-            width: 250px;
+            width: 25rem;
             background-color: #fff;
             box-shadow: 0px 10px 10px 3px rgba(0, 0, 0, 0.3);
             border-bottom-left-radius: 3px;
             border-bottom-right-radius: 3px;
+            border-bottom: 5px solid $secondary-color;
             z-index: 111;
             transition: 0.4s all;
+
+            a {
+              @include normal-font;
+              transition: 0.4s all;
+              
+              &:hover {
+                padding-left: 1rem;
+                color: $secondary-color;
+              }
+            }
           }
 
           &:hover .dropdown {
@@ -87,7 +101,7 @@
         padding: .8rem 1.1rem;
         transition: 0.5s color ease;
 
-        &::before {
+        &.bar::before {
           content: "";
           width: 100%;
           height: 4px;
@@ -104,7 +118,7 @@
           color: $secondary-color;
         }
 
-        &:hover::before {
+        &.bar:hover::before {
           transform: scale3d(1,1,1);
           transform-origin: 0 50%;
         }
