--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'breakpoints';
 @import 'account';
 @import 'menu';
 @import 'home';
@@ -8,13 +9,19 @@
 @import 'director';
 @import 'why-study';
 @import 'courses';
+@import 'news-and-events';
+@import 'documents';
+@import 'gallery';
+@import 'application';
 @import 'footer';
 @import 'responsive';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100&family=Nunito+Sans:wght@400;600&family=Satisfy&family=Urbanist:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400&family=Nunito+Sans:wght@400;600&family=Satisfy&family=Urbanist:wght@200;300;400;500;600;700;800;900&display=swap');
 
 html {
-  font-size: 62.5%;
+  // font-size: 62.5%;
+  font-size: calc(4.9px + 0.390625vw);
 }
+
 body {
   font-family: 'Lato', sans-serif;
   background: $primary-color;
@@ -29,24 +36,20 @@ p {
 }
 
 h1 {
-  @include bold-font;
-  font-size: 8rem;
+  @include bold-font-one;
 }
 
 h2 {
-  @include bold-font;
-  font-size: 4.16rem;
+  @include bold-font-two;
   text-transform: capitalize;
 }
 
 h3 {
-  @include bold-font;
-  font-size: 3.36rem;
+  @include bold-font-three;
 }
 
 h4 {
-  @include bold-font;
-  font-size: 2.24rem;
+  @include bold-font-four;
 }
 
 a {
@@ -57,6 +60,7 @@ a {
   position: fixed;
   z-index: 2;
   width: 100%;
+  overflow: visible;
 }
 
 section > * {
@@ -76,7 +80,11 @@ section, header {
     width: 100%;
 
     & > * {
-      width: 78%;
+      width: 1055px;
+      padding: 0 2rem;
+      @include small-pc {
+        width: 89%;
+      }
       margin: 0 auto;
     }
     h2 {
@@ -255,6 +263,7 @@ section, header {
     align-items: flex-start;
     padding-right: 3.2rem;
     @include info-width;
+    min-width: 40rem;
     height: 350px;
 
     h2 {
@@ -263,14 +272,16 @@ section, header {
   }
 
   &__image {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     height: 428px;
     position: relative;
 
     &--photo {
       display: block;
       margin-left: auto;
-      width: 350px;
+      width: 100%;
+      max-width: 350px;
       height: 420px;
       border-top-left-radius: 45.5%;
       border-top-right-radius: 45.5%;
