--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,6 +85,9 @@ section, header {
       @include small-pc {
         width: 89%;
       }
+      @include phones-big {
+        width: 95%;
+      }
       margin: 0 auto;
     }
     h2 {
