--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -12,7 +12,7 @@ section.home .why-us {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+  width: 100%;
 
   &__card-container {
     width: 100%;
@@ -169,6 +169,9 @@ section.home .attention-wrapper {
     left: 0;
     width: 100%;
     max-width: 300px;
+    @include phones-small {
+      max-width: 100%;
+    }
     padding: 0;
   }
 }
@@ -177,6 +180,9 @@ section.home .reviews {
   margin-top: 8rem;
   .slider {
     max-width: 160rem;
+    @include phones-small {
+      max-width: 100%;
+    }
     height: 32rem;
     margin: 0 auto;
     position: relative;
@@ -290,4 +296,8 @@ section.home .reviews {
 
 section.home .courtesy {
   // padding-bottom: 6rem;
+}
+
+footer {
+  display: none;
 }
