--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,11 +10,18 @@ footer {
       @include flex;
       align-items: flex-start;
       justify-content: space-between;
+      @include phones-small {
+        flex-direction: column;
+        align-items: center;
+      }
 
       & > * {
         @include flex(column);
         align-items: flex-start;
         gap: .96rem;
+        @include phones-small {
+          align-items: center;
+        }
 
         h3 {
           margin-top: 2.4rem;
@@ -24,6 +31,10 @@ footer {
           font-size: 1.44rem;
           text-transform: uppercase;
           color: $secondary-color;
+          @include phones-small {
+            margin-top: 3rem;
+            margin-bottom: 0;
+          }
         }
 
         a {
@@ -46,6 +57,10 @@ footer {
       background: $footer-newsletter;
       @include flex;
       justify-content: space-between;
+      @include phones-small {
+        flex-direction: column;
+        height: 100%;
+      }
       padding: 1.04rem 1.6rem;
       margin-bottom: 3.2rem;
 
@@ -61,6 +76,11 @@ footer {
         width: 60%;
         @include flex;
         justify-content: space-between;
+        @include phones-small {
+          flex-direction: column;
+          background: transparent;
+          width: 100%;
+        }
         height: 100%;
         padding: 1.6rem;
 
@@ -70,6 +90,12 @@ footer {
           height: 100%;
           border: none;
           outline: none;
+          @include phones-small {
+            background: $dull-white;
+            height: 4rem;
+            padding: .6rem;
+            margin-bottom: 2rem;
+          }
         }
 
         button {
