--- a/scss/main.scss
+++ b/scss/main.scss
@@ -110,7 +110,7 @@ section, header {
 
   @include phones-small {
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
   }
 }
@@ -155,12 +155,23 @@ section, header {
        background: #0D0D0D;
        width: 100%;
        height: 4rem;
-       font-size: 1.6rem;
-       letter-spacing: .04rem;
-       font-weight: 400;
        display: flex;
        justify-content: center;
        align-items: center;
+       gap: .5rem;
+
+       & > * {
+        font-size: 1.6rem;
+        letter-spacing: .04rem;
+        font-weight: 400;
+       }
+
+       &--white {
+        color: $primary-color;
+        @include phones-small {
+          display: none;
+        }
+       }
 
        &--green {
          color: $secondary-color;
@@ -182,22 +193,33 @@ section, header {
 
   .attention {
     margin-top: 6.4rem;
-    // height: 350px;
-    padding: 7rem 0;
+    height: 350px;
+    padding-top: 7rem;
+    padding-bottom: 7rem;
     @include flex(column);
     gap: 2rem;
+    @include phones-small {
+      align-items: flex-start;
+    }
 
     h2, h4, ul {
       width: 700px;
-      @include phones-small {
-        width: 100%;
-      }
       margin: 0 auto;
       text-align: center;
+      @include phones-small {
+        width: 100%;
+        text-align: left;
+        margin: 0;
+      }
     }
 
     h2 {
       font-size: 3.2rem;
+    }
+
+    li {
+      list-style-type: disc;
+      list-style-position: inside;
     }
 
     h4, li {
@@ -208,6 +230,11 @@ section, header {
     button {
       display: block;
       margin: 2.4rem auto 0 auto;
+
+      @include phones-small {
+        margin: 0;
+        margin-top: 2.4rem;
+      }
     }
   }
 }
@@ -226,6 +253,8 @@ section, header {
     justify-content: space-between;
     max-width: 600px;
     @include phones-small {
+      flex-direction: column;
+      gap: 3rem;
       max-width: 100%;
     }
     margin: 0 auto;
@@ -275,7 +304,11 @@ section, header {
 // Meet Our Director
 .director {
   align-items: center;
-  padding: 3.68rem 0;
+  padding-top: 3.68rem;
+  padding-bottom: 3.68rem;
+  @include phones-small {
+    gap: 6rem;
+  }
 
   &__info {
     @include flex(column);
@@ -311,7 +344,8 @@ section, header {
       width: 100%;
       max-width: 350px;
       @include phones-small {
-        max-width: 100%;
+        max-width: 350px;
+        margin: 0 auto;
       }
       height: 420px;
       border-top-left-radius: 45.5%;
