--- a/scss/main.scss
+++ b/scss/main.scss
@@ -134,7 +134,7 @@ section, header {
 
      h1 {
        margin-bottom: 2.4rem;
-       width: fit-content;
+       width: 100%;
        text-align: center;
      }
 
