--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -69,6 +69,9 @@ footer {
         margin: auto 3.2rem;
         padding: 1.6rem;
         color: $dull-white;
+        @include phones-small {
+          text-align: center;
+        }
       }
 
       &__input-area {
