--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -219,7 +219,10 @@ section.home .reviews {
     @include phones-small {
       max-width: 100%;
     }
-    height: 45rem;
+    height: 40rem;
+    @include phones-small {
+      height: 45rem;
+    }
     margin: 0 auto;
     position: relative;
 
