--- a/scss/main.scss
+++ b/scss/main.scss
@@ -203,6 +203,7 @@ section, header {
     gap: 2rem;
     @include phones-small {
       align-items: flex-start;
+      height: 600px;
     }
 
     h2, h4, ul {
