--- a/scss/main.scss
+++ b/scss/main.scss
@@ -196,9 +196,9 @@ section, header {
 
   .attention {
     margin-top: 6.4rem;
-    height: 350px;
+    height: 390px;
     padding-top: 7rem;
-    padding-bottom: 7rem;
+    padding-bottom: 5rem;
     @include flex(column);
     gap: 2rem;
     @include phones-small {
@@ -274,6 +274,10 @@ section, header {
     .people {
       @include flex;
       justify-content: space-between;
+      @include phones-small {
+        flex-direction: column;
+        gap: 6rem;
+      }
       width: 100%;
 
       &__card {
