--- a/scss/_instructors.scss
+++ b/scss/_instructors.scss
@@ -1,5 +1,6 @@
 section.instructors .courses {
-  padding: 4.8rem 0;
+  padding-top: 4.8rem;
+  padding-bottom: 4.8rem;
   & > * {
     margin-bottom: 8rem;
   }
