--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,10 @@ html {
   }
 }
 
+.hide {
+  display: none;
+}
+
 body {
   font-family: 'Lato', sans-serif;
   background: $primary-color;
@@ -42,7 +46,7 @@ p {
 h1 {
   @include bold-font-one;
   @include phones-small {
-    font-size: 7rem;
+    font-size: 6rem;
   }
 }
 
@@ -282,8 +286,7 @@ section, header {
 
       &__card {
         @include three-card-system;
-        @include outline;
-        // box-shadow: 5px 15px 20px rgba(169, 169, 169, 0.45);
+        box-shadow: 5px 15px 20px rgba(169, 169, 169, 0.45);
         padding: 0 2.08rem;
 
         @include phones-small {
@@ -296,7 +299,7 @@ section, header {
         }
 
         &--details {
-          padding: 4rem .1rem;
+          padding: 4rem 2rem;
           @include flex(column);
           gap: 1.6rem;
           width: 100%;
