why-study responsive

--- a/scss/_why-study.scss
+++ b/scss/_why-study.scss
@@ -6,9 +6,16 @@ section.why-study .study {
   .study-row {
     align-items: flex-end;
     width: 90%;
+    @include phones-small {
+      align-items: center;
+      gap: 4rem;
+    }
     &__info {
       width: 100%;
       max-width: 450px;
+      @include phones-small {
+        max-width: 100%;
+      }
 
       h2 {
         font-size: 3.6rem;
@@ -29,6 +36,10 @@ section.why-study .study {
   }
   .study-row.right-row {
     align-self: flex-end;
+    @include phones-small {
+      flex-direction: column-reverse;
+      align-self: center;
+    }
   }
 }
 
@@ -49,12 +60,20 @@ section.why-study .programmes {
     grid-template-rows: 1fr 1fr 1fr;
     padding: 9rem 0;
     padding-bottom: 0;
+    @include phones-small {
+      @include flex(column);
+      padding-top: 3rem;
+    }
 
     & > * {
       // width: 100%;
       // max-width: 30rem;
       padding: 0 9rem;
       margin-bottom: 4rem;
+
+      @include phones-small {
+        padding: 0 .2rem;
+      }
     }
 
     h3 {
