--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,6 +2,9 @@
   height: 100vh !important;
   width: 100%;
   color: $primary-color;
+  background-color: rgba(14, 29, 21, 0.82);
+  background-image: none !important;
+  background: none !important;
   @include phones-small {
     display: flex;
     align-items: flex-start !important;
@@ -10,6 +13,9 @@
 
   &__content {
     @include flex(column);
+    width: 100%;
+    padding: 0;
+    background: $primary-color;
   }
 
   h1 {
@@ -23,10 +29,13 @@
 
   .hero-btn {
     align-self: center;
+    margin-left: auto;
+    margin-right: auto;
     @include phones-small {
       align-self: flex-start;
       margin-left: 0;
     }
+    z-index: 999;
   }
 }
 
@@ -35,6 +44,104 @@
       text-align: left !important;
     }
   }
+
+
+
+
+
+
+
+
+.slidey {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.slidey__item {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  left: -100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center center;
+}
+
+.slidey__item:nth-child(1) {
+  background-image: linear-gradient(rgba(14, 29, 21, 0.82), rgba(14, 29, 21, 0.82)),
+    url("../img/hero1.jpg");
+  backdrop-filter: blur(4px);
+}
+
+.slidey__item:nth-child(2) {
+  backdrop-filter: blur(4px);
+  background-image: linear-gradient(rgba(14, 29, 21, 0.82), rgba(14, 29, 21, 0.82)),
+    url("../img/hero2.jpg");
+}
+.slidey__item:nth-child(3) {
+  backdrop-filter: blur(4px);
+  background-image: linear-gradient(rgba(14, 29, 21, 0.82), rgba(14, 29, 21, 0.82)),
+    url("../img/hero3.jpg");
+}
+
+
+
+.slidey__arrows {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.slidey__arrows--left,
+.slidey__arrows--right {
+  border: none;
+  margin: 0;
+  text-decoration: none;
+  font-family: sans-serif;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: transparent;
+  color: #fff;
+  text-shadow: 1px 1px #666;
+  font-size: 3.5rem;
+  padding: 0 2rem;
+  cursor: pointer;
+  transition: all 0.5s, opacity 0.5s;
+}
+
+.slidey__arrows--left:hover {
+  opacity: 0.6;
+  transform: translateX(-5px);
+}
+
+.slidey__arrows--right:hover {
+  opacity: 0.6;
+  transform: translateX(5px);
+}
+
+.slidey__arrows--right:focus,
+.slidey__arrows--left:focus {
+  outline: thin dashed rgba(255, 255, 255, 0.651);
+  outline-offset: -4px;
+}
+
+
+
+
+
+
+
+
 
 
 
