--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -55,7 +55,8 @@
 }
 
 .header {
-  background: $primary-color;
+  background: $header-bg;
+  box-shadow: 5px 5px 7px rgba(169, 169, 169, 0.05);
   height: 7rem;
 
   &__container {
