--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -4,7 +4,8 @@
 
 @include media-md {
   .header {
-      background: $primary-color;
+      background: $header-bg;
+      box-shadow: 5px 5px 7px rgba(169, 169, 169, 0.05);
       height: 8rem;
       margin-top: 0 !important;
       overflow: visible;
