--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -99,6 +99,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @include phones-small {
+    display: none;
+  }
 }
 
 .slidey__arrows--left,
